# 1d6-api

./: .editorconfig  .gitignore  Cargo.toml  README.md  api.yaml  jitpack.yml  openapi.yaml  settings.gradle.kts
.github/workflows/: api.yml  jvm.yml  manual-build.yml  sdk.yml  tsdk.yml
api/: .dockerignore  Cargo.toml  Dockerfile  Example.Secrets.toml  Launch_Example  docker-compose.yml
api/assets/: login.html
api/migrations/: 20240528_init.sql  20240612_project-restructure.sql
api/src/: lib.rs  main.rs
api/src/routes/: assets.rs  defaults.rs  errors.rs  mod.rs
api/src/routes/v1/: game_services.rs  mod.rs  mods.rs  statistics.rs  telemetry.rs  user.rs
api/src/utils/: auth.rs  cacher.rs  dates.rs  env.rs  gdpr.rs  mod.rs  validation.rs
js/: README.md  package.json  test.html  tsconfig.json  webpack.node.config.js  webpack.web.config.js
js/src/: index.ts  sided.ts
jsdk/src/main/kotlin/net/onedsix/api/: ApiWrapper.kt  Authenticator.kt
jvm/: build.gradle.kts
jvm/src/main/kotlin/: Auth.kt
jvm/src/test/: Test.kt
migrations/: 0001_init.sql
rsdk/: Cargo.toml
sdk/src/main/kotlin/: OneDSixApiWrapper.kt
sdk/src/test/: Test.kt
src/: lib.rs  main.rs  state.rs
src/routes/: defaults.rs  errors.rs  mod.rs  responses.rs  test.rs
src/routes/v1/: game_services.rs  mod.rs  mods.rs  statistics.rs  telemetry.rs  user.rs  users.rs
src/utils/: cacher.rs  dates.rs  mod.rs  ratelimit.rs  username.rs
src/utils/validation/: auth.rs  mod.rs  user.rs  username.rs
src/validate/: cdns.rs  clean.rs  mod.rs
src/webhooks/: matrix.rs  mod.rs
src/wehooks/: discord.rs  matrix.rs  mod.rs
tools/: requester.py
tsdk/: package.json  tsconfig.json  webpack.config.js
tsdk/src/: auth.ts  index.ts
tsdk/src/argon/: browserArgon.ts  nodeArgon.ts
