[package]
name = "onedsix-api"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-identity = "0.7.1"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-service = "2.0.2"
actix-web = "4.3.1"
shuttle-actix-web = "0.45.0"
shuttle-runtime = "0.45.0"
serde = "1.0.148"
serde_json = "1.0"
shuttle-shared-db = { version = "0.45.0", features = ["postgres", "sqlx"] }
sqlx = "0.7.1"
tokio = "1.26.0"
reqwest = { version = "0.12.4", features = ["json", "multipart"] }
chrono = { version = "0.4.26", features = ["serde"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
bytes = "1.4.0"
base64 = "0.22.1"
sha1 = { version = "0.10.6", features = ["std"] }
sha2 = "0.10.8"
hmac = "0.12.1"
argon2 = { version = "0.5.0", features = ["std"] }
murmur2 = "0.1.0"
bitflags = "2.4.0"
hex = "0.4.3"
zxcvbn = "3.0.1"
totp-rs = { version = "5.0.2", features = ["gen_secret"] }
url = "2.4.0"
urlencoding = "2.1.2"
futures = "0.3.30"
thiserror = "1.0.61"
lazy_static = "1.4.0"
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"

[profile.dev]
opt-level = 0                # Minimal optimization, speeds up compilation
lto = false                  # Disables Link Time Optimization
incremental = true           # Enables incremental compilation
codegen-units = 16           # Higher number can improve compile times but reduce runtime performance
