[package]
name = "onedsixapi"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-identity = "0.7.1"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-service = "2.0.2"
actix-web = "4.6.0"
governor = "0.6.3"
tokio = "1.38.0"

shuttle-actix-web = "0.45.0"
shuttle-runtime = "0.45.0"
shuttle-shared-db = { version = "0.45.0", features = ["postgres", "sqlx"] }

sqlx = "0.7.4"
meilisearch-sdk = "0.26.1"

reqwest = { version = "0.12.4", features = ["json", "multipart"] }
#matrix-sdk = "0.7.1"

chrono = { version = "0.4.38", features = ["serde"] }
rand = "0.8.5"

url = "2.5.0"
urlencoding = "2.1.3"

futures = "0.3.30"
futures-util = "0.3.30"
thiserror = "1.0.61"
lazy_static = "1.4.0"
itertools = "0.13.0"

serde = "1.0.203"
serde_json = "1.0.117"

# TODO: remove unused auth related dependencies
totp-rs = { version = "5.5.1", features = ["gen_secret"] }
base64 = "0.22.1"
argon2 = { version = "0.5.3", features = ["std"] }
rand_chacha = "0.3.1"
sha1 = { version = "0.10.6", features = ["std"] }
sha2 = "0.10.8"
hex = "0.4.3"
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"

validator = { version = "0.16.1", features = ["derive", "phone"] } # Outdated Intentionally!
regex = "1.10.4"
censor = "0.3.0"
spdx = { version = "0.10.6", features = ["text"] }

[profile.dev]
opt-level = 0                # Minimal optimization, speeds up compilation
lto = false                  # Disables Link Time Optimization
incremental = true           # Enables incremental compilation
codegen-units = 16           # Higher number can improve compile times but reduce runtime performance
